@@ -12,6 +12,8 @@ another time.
 Version 0.5.0dev (unreleased)
 -----------------------------
 
+- make ISiteMenu only available for ISite but not for IContainmentRoot
+
 - make template pluggable with z3c.template pattern
 
 - Initial Release
